--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 <body>
     <div class="container">
         <header>
-            <h1>[Твоё имя]</h1>
-            <p>Контакты: [Твой email] | [Твой телефон] | [GitHub]</p>
+            <h1>Пинжин Максим Вячеславович</h1>
+            <p>Контакты: linuxmax375@gmail.com</p>
         </header>
 
         <section class="education">
             <h2>Образование</h2>
-            <p>[Название школы/университета], [Специальность], [Годы]</p>
+            <p>г.Барнаул МБОУ СОШ №89 , Основное общее, 2013-н.г.</p>
         </section>
 
         <section class="skills">
@@ -96,9 +96,6 @@
             <p>Меня привлекает мобильная разработка, так как это область, где можно создавать полезные и удобные приложения для миллионов пользователей. У меня есть базовые знания в программировании и большой опыт работы с Unix-системами, что помогает мне быстро осваивать новые технологии. Я готов учиться и развиваться в Android-разработке, чтобы стать профессионалом в этой области.</p>
         </section>
 
-        <footer>
-            <p>Дополнительно: [Ссылки на проекты, если есть]</p>
-        </footer>
     </div>
 </body>
 </html>
